refactor: tracks with PostgreSQL; Metadata for tracks from MizucBrainz; Track store is RustFS(S3 like)
